syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "ChannelStateProto";

import "sdc/biceps/abstractdevicecomponentstate.proto";

message ChannelStateMsg {
  AbstractDeviceComponentStateMsg abstract_device_component_state = 1;
}
