syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "SystemContextStateProto";

import "sdc/biceps/abstractdevicecomponentstate.proto";

message SystemContextStateMsg {
  AbstractDeviceComponentStateMsg abstract_device_component_state = 1;
}
